--- a/examples/ck-ad-mip.html
+++ b/examples/ck-ad-mip.html
@@ -22,14 +22,15 @@
     <h3 style="text-align: center; font-weight: normal; color: #666;">直投广告组件</h3>
 
 
-    <div style="margin-bottom: 200px;">
-        <mip-ck-ad ck-ad-pid="52"></mip-ck-ad>
-    </div>
+    <mip-fixed  type="bottom" id="ck-ad-52">
+        <mip-ck-ad ck-ad-pid="52" ck-style="body{padding-bottom: 85px;}"></mip-ck-ad>
+    </mip-fixed>
 
-    <mip-ck-ad ck-ad-pid="53" lazy="false"></mip-ck-ad>
+    <mip-ck-ad ck-ad-pid="53" lazy="false"  bd-style="body{padding-bottom: 85px;}"></mip-ck-ad>
 </body>
 <script src="https://mipcache.bdstatic.com/static/mipmain-v1.1.0.js"></script>
 <script async src="https://mipcache.bdstatic.com/static/v1.2/mip-ad.js" ></script>
+<script src="https://mipcache.bdstatic.com/static/v1.2/mip-fixed.js" ></script>
 <script src="../extensions/mip-ck-ad/0.1/mip-ck-ad.js"></script>
 
 </html>
