--- a/examples/mip-hk-fcv.html
+++ b/examples/mip-hk-fcv.html
@@ -38,6 +38,6 @@
 </div>
 
 <script src="/dist/mipmain.js"></script>
-<script src="/dist/extensions/mip-hk-cl/0.1/mip-hk-cl.js"></script>
+<script src="/dist/extensions/mip-hk-fcv/0.1/mip-hk-fcv.js"></script>
 </body>
 </html>
