--- a/examples/mip-hk-fd.html
+++ b/examples/mip-hk-fd.html
@@ -56,6 +56,6 @@
 </script>
 
 <script src="/dist/mipmain.js"></script>
-<script src="/dist/extensions/mip-hk-cl/0.1/mip-hk-cl.js"></script>
+<script src="/dist/extensions/mip-hk-fd/0.1/mip-hk-fd.js"></script>
 </body>
 </html>
