--- a/examples/mip-hk-scene.html
+++ b/examples/mip-hk-scene.html
@@ -27,6 +27,6 @@
 <mip-hk-keep type="video" urlKey="http://www.internal.video.baidu.com/23f7c713a6de54bf80d13a6e1f49c1a3.html"></mip-hk-keep>
 
 <script src="/dist/mipmain.js"></script>
-<script src="/dist/extensions/mip-hk-cl/0.1/mip-hk-cl.js"></script>
+<script src="/dist/extensions/mip-hk-scene/0.1/mip-hk-scene.js"></script>
 </body>
 </html>
