--- a/examples/mip-hk-sh.html
+++ b/examples/mip-hk-sh.html
@@ -44,7 +44,7 @@
 </article>
 
 <script src="/dist/mipmain.js"></script>
-<script src="/dist/extensions/mip-vd-tabs/0.1/mip-vd-tabs.js"></script>
+<script src="/dist/extensions/mip-hk-sh/0.1/mip-hk-sh.js"></script>
 </body>
 </html>
 
