--- a/examples/mip-hk-sha.html
+++ b/examples/mip-hk-sha.html
@@ -37,7 +37,7 @@
 </mip-hk-share>
 
 <script src="/dist/mipmain.js"></script>
-<script src="/dist/extensions/mip-vd-tabs/0.1/mip-vd-tabs.js"></script>
+<script src="/dist/extensions/mip-hk-sha/0.1/mip-hk-sha.js"></script>
 </body>
 </html>
 
